--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -19,5 +19,9 @@
     "@xiaoyaoliu/eslint-config-react": "workspace:^",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   }
 }
