--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -13,5 +13,9 @@
   "license": "MIT",
   "dependencies": {
     "@xiaoyaoliu/eslint-config-react": "workspace:^"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   }
 }
